Micody/GCC_LOGS
/home/manoa/snap/usr/local/src/conversion.c: In function ‘main’:
/home/manoa/snap/usr/local/src/conversion.c:15:16: error: ‘ariary’ undeclared (first use in this function)
   15 |    scanf("%d",&ariary);
      |                ^~~~~~
/home/manoa/snap/usr/local/src/conversion.c:15:16: note: each undeclared identifier is reported only once for each function it appears in
